--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 - export REPO=rjarow/nginx-proxy
 - docker build -t $REPO:$TAG -f Dockerfile .
 after_success:
-- docker login -u $DOCKER_USER -p $DOCKER_PASS
+- docker login -u=$DOCKER_USER -p=$DOCKER_PASS
 - if [[ $TRAVIS_PULL_REQUEST == "false" ]] && [[ $TRAVIS_BRANCH == "master" ]]; then
   docker tag $REPO:$TAG $REPO:$TRAVIS_BUILD_NUMBER; docker push $REPO:$TRAVIS_BUILD_NUMBER;
   fi
